<?xml version="1.0"?>
<package format="2">
  <name>exp_rerun</name>
  <version>0.0.0</version>
  <description>The exp_rerun package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="chsieh16@illinois.edu">Chiao Hsieh</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>NCSA</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/exp_rerun</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="chsieh16@illinois.edu">Chiao Hsieh</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
  <exec_depend>gem_gazebo</exec_depend>
  <exec_depend>gem_vision</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
